--- a/app/src/main/assets/www/views/demo.html
+++ b/app/src/main/assets/www/views/demo.html
@@ -1,7 +1,8 @@
 <html>
 <head  >
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <!--<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="format-detection"content="telephone=no, email=no" />
     <meta name="format-detection" content="telephone=no"/>
     <link href="../public/css/reset.css" rel="stylesheet"/>
@@ -13,7 +14,144 @@
 <body>
 
 
-<div id="main" class="page" style="display: none;">
+<style type="text/css">
+    * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    html {
+        -ms-touch-action: none;
+    }
+
+    body,ul,li {
+        padding: 0;
+        margin: 0;
+        border: 0;
+    }
+
+    body {
+        font-size: 12px;
+        font-family: ubuntu, helvetica, arial;
+        overflow: hidden; /* this is important to prevent the whole page to bounce */
+    }
+
+    #wrapper {
+        position: absolute;
+        z-index: 1;
+        top: 50px;
+        bottom: 50px;
+        left: 50px;
+        right: 50px;
+        background: #ccc;
+        overflow: hidden;
+    }
+
+    #scroller {
+        position: absolute;
+        z-index: 1;
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        width: 100%;
+        -webkit-transform: translateZ(0);
+        -moz-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        -o-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        -webkit-text-size-adjust: none;
+        -moz-text-size-adjust: none;
+        -ms-text-size-adjust: none;
+        -o-text-size-adjust: none;
+        text-size-adjust: none;
+    }
+
+    #scroller ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        text-align: left;
+    }
+
+    #scroller li {
+        padding: 0 10px;
+        height: 40px;
+        line-height: 40px;
+        border-bottom: 1px solid #ccc;
+        border-top: 1px solid #fff;
+        background-color: #fafafa;
+        font-size: 14px;
+    }
+
+</style>
+</head>
+<body>
+<div id="font">xxxx</div>
+<div id="message"></div>
+<div id="wrapper">
+    <div id="scroller">
+        <ul>
+            <li>Pretty row 1</li>
+            <li>Pretty row 2</li>
+            <li>Pretty row 3</li>
+            <li>Pretty row 4</li>
+            <li>Pretty row 5</li>
+            <li>Pretty row 6</li>
+            <li>Pretty row 7</li>
+            <li>Pretty row 8</li>
+            <li>Pretty row 9</li>
+            <li>Pretty row 10</li>
+            <li>Pretty row 11</li>
+            <li>Pretty row 12</li>
+            <li>Pretty row 13</li>
+            <li>Pretty row 14</li>
+            <li>Pretty row 15</li>
+            <li>Pretty row 16</li>
+            <li>Pretty row 17</li>
+            <li>Pretty row 18</li>
+            <li>Pretty row 19</li>
+            <li>Pretty row 20</li>
+            <li>Pretty row 21</li>
+            <li>Pretty row 22</li>
+            <li>Pretty row 23</li>
+            <li>Pretty row 24</li>
+            <li>Pretty row 25</li>
+            <li>Pretty row 26</li>
+            <li>Pretty row 27</li>
+            <li>Pretty row 28</li>
+            <li>Pretty row 29</li>
+            <li>Pretty row 30</li>
+            <li>Pretty row 31</li>
+            <li>Pretty row 32</li>
+            <li>Pretty row 33</li>
+            <li>Pretty row 34</li>
+            <li>Pretty row 35</li>
+            <li>Pretty row 36</li>
+            <li>Pretty row 37</li>
+            <li>Pretty row 38</li>
+            <li>Pretty row 39</li>
+            <li>Pretty row 40</li>
+            <li>Pretty row 41</li>
+            <li>Pretty row 42</li>
+            <li>Pretty row 43</li>
+            <li>Pretty row 44</li>
+            <li>Pretty row 45</li>
+            <li>Pretty row 46</li>
+            <li>Pretty row 47</li>
+            <li>Pretty row 48</li>
+            <li>Pretty row 49</li>
+            <li>Pretty row 50</li>
+        </ul>
+    </div>
+    </div>
+
+
+<div id="main" class="page" style="display: block;">
     <div class="header">
         <div class="pull-left">
             <a class="icon-arrow-left"></a>
@@ -37,7 +175,7 @@
     <div class="pages" id="pages-scroll" >
         <ul>
             <li class="active">
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 100% 100%;width:100%;height:100%;">
+                <div class="stage-content edit-area pages-img pages-img-bg"  style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 100% 100%;width:100%;height:100%;">
                     <div class="symbol" style="z-index: 2;">
                         <div class="pages-img edit-area">
                             <img data-name="img1" width="50" height="50" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/>
@@ -55,209 +193,17 @@
     <span class="icon-add-stage" id="AddNewStage"></span>
 </div>
 
-<div id="editorText" style="display: block">
-    <div class="header">
-        <div class="pull-left">
-            <a class="icon-arrow-left backToMain" ></a>
-            <span class="tit">Edit Text</span>
-        </div>
-        <div class="pull-right">
-            <ul class="list-inline">
-                <li><a class="icon-pencil" id="TextEditerOpt"></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="pages editable">
-        <div class="tpl-item" style="background: url(../public/img/temp/stage_example.jpg);background-size: 100% 100%;">
-            <div id="test" class="pages-txt selected" contenteditable="true" style="margin:70px auto;width:150px;color:#fff;text-align: left;background:rgba(0,0,0,0.5);">As c update of the classic translation corpus, the combination of network technology and language essence</div>
-        </div>
-    </div>
-    <div class="pop-layer pop-editer-opt" style="display: none">
-        <div class="hd">
-            <i class="icon-bold" id="setFontWeight" ></i>
-            <i class="icon-italic" id="setFontStyle"></i>
-            <i class="icon-hyperlink" id="setFontLink"></i>
-            <i class="icon-align-left" id="setFontAlign"></i>
-        </div>
-        <div class="bd opts">
-            <div class="item" data-name="pop-editer-color"><span class="opt-name">Color</span><span class="opt-right"><span class="opt-val-color" style="background-color: #fff"></span><i class="icon-arrow-right-list"></i></span></div>
-            <div class="item" data-name="pop-editer-font"><span class="opt-name">Font</span><span class="opt-right"><span class="opt-val">Hevele</span><i class="icon-arrow-right-list"></i></span></div>
-            <div class="item" data-name="pop-editer-animation"><span class="opt-name">Animation</span><span class="opt-right"><span class="opt-val">Animation1</span><i class="icon-arrow-right-list"></i></span></div>
-        </div>
-    </div>
-
-    <div class="pop-layer pop-editer-font" style="display: none">
-        <div class="hd">
-            <i class="icon-arrow-left backPopLayerOpt"></i>
-            <span class="tit">Font Selection</span>
-        </div>
-        <div class="bd opts">
-            <div class="item"><span class="opt-name">Font1</span><span class="opt-right"><i class="icon-correct"></i></span></div>
-            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
-            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><div class="download-progress-bar"><div class="download-progress-percent" style="width:50%;"></div></div></span></div>
-            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
-            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
-            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
-            <div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>
-        </div>
-    </div>
-
-    <div class="pop-layer pop-editer-animation" style="display: block">
-        <div class="hd">
-            <i class="icon-arrow-left backPopLayerOpt"></i>
-            <span class="tit">Animation</span>
-        </div>
-        <div class="bd">
-            <span class="anim-item"><i data-animation="slideInDown" class="icon-enter-from-bottom"></i><span class="anim-name">bottom</span></span>
-            <span class="anim-item"><i data-animation="slideInLeft" class="icon-enter-from-left"></i><span class="anim-name">left</span></span>
-            <span class="anim-item"><i data-animation="slideInRight" class="icon-enter-from-right"></i><span class="anim-name">right</span></span>
-            <span class="anim-item"><i data-animation="slideInUp" class="icon-enter-from-top"></i><span class="anim-name">top</span></span>
-            <span class="anim-item"><i data-animation="fadeInDown" class="icon-fadeIn-from-bottom"></i><span class="anim-name">dsfadfs</span></span>
-            <span class="anim-item"><i data-animation="fadeInLeft" class="icon-fadeIn-from-left"></i><span class="anim-name">dsfadfs</span></span>
-            <span class="anim-item"><i data-animation="fadeInRight" class="icon-fadeIn-from-right"></i><span class="anim-name">dsfadfs</span></span>
-            <span class="anim-item"><i data-animation="fadeInIp" class="icon-fadeIn-from-top"></i><span class="anim-name">dsfadfs</span></span>
-            <span class="anim-item"><i data-animation="pulse" class="icon-tuxian"></i><span class="anim-name">dsfadfs</span></span>
-            <span class="anim-item"><i data-animation="wobble"  class="icon-tanru-from-top"></i><span class="anim-name">抖动</span></span>
-            <span class="anim-item"><i data-animation="flash"  class="icon-tanru-from-top"></i><span class="anim-name">闪烁</span></span>
-            <span class="anim-item"><i data-animation="bounceInDown"  class="icon-tanru-from-top"></i><span class="anim-name">下落抖动</span></span>
-            <span class="anim-item"><i class="icon-tanru-from-top"></i><span class="anim-name">roate</span></span>
-        </div>
-    </div>
-
-    <div class="pop-layer pop-editer-color" style="display: none">
-        <div class="hd">
-            <i class="icon-arrow-left backPopLayerOpt"></i>
-            <span class="tit">Color</span>
-        </div>
-        <div class="bd" id="color-box">
-            <div class="color-main">
-                <span class="color-main-item active"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-                <span class="color-main-item"></span>
-            </div>
-            <div class="color-sub">
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-                <span class="color-sub-item"><i></i></span>
-            </div>
-        </div>
-    </div>
-
-    <div class="ui-mask" style="display: none; width: 100%; height: 671px;"></div>
-    <div class="ui-dialog href-dialog" style="width: 300px; height: 200px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
-        <div class="ui-dialog-title">Set Destination</div>
-        <div class="ui-dialog-content">
-            <div class="input-href">
-                <input type="text" value="http://"/>
-            </div>
-        </div>
-        <div class="ui-dialog-btns">
-            <a class="ui-btn btn-cancle">Cancle</a>
-            <a class="ui-btn btn-submit">Confirm</a>
-        </div>
-    </div>
-
-</div>
-
-<div id="editorImage" style="display: none">
-    <div class="header">
-        <div class="pull-left">
-            <a class="icon-arrow-left"></a><span class="tit">Edit Image</span>
-        </div>
-        <div class="pull-right">
-            <!--图片元件图片选择入口-->
-            <a class="imgIco-edit-image"></a>
-        </div>
-    </div>
-    <!--图片操作区域-->
-    <div id="cropper">
-        <div class="crop-area">
-            <img />
-        </div>
-    </div>
-</div>
-
-<div id="storyStageList" style="display: none">
-    <div class="header">
-        <div class="pull-left">
-            <a class="icon-arrow-left"></a>
-            <span class="tit">Page List</span>
-        </div>
-        <div class="pull-right">
-            <ul class="list-inline">
-                <li><a class="icon-dustbin" id="pageDel"></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="story-page-list" >
-        <ul id="storyDragBox">
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-            <li class="tpl-page-item" draggable="false">
-                <span class="drag-handle">☰</span>
-                <img class="stage-thumb" src="../public/img/temp/stage_example.jpg" alt="">
-                <i class="icon-correct"></i>
-            </li>
-        </ul>
-    </div>
-
-</div>
-
-<script src="../public/js/cordova.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.file.js"></script>
+<!--<script src="../public/js/cordova.js"></script>-->
+<!--<script type="text/javascript" charset="utf-8" src="cordova.file.js"></script>-->
 <script src="../public/js/jquery2.1.4.min.js"></script>
 
 <script src="../public/js/template.js"></script>
 <script src="../public/js/hammer.min.js"></script>
 <script src="../public/js/iscroll-lite.js"></script>
+<script src="../public/js/iscroll-zoom.js"></script>
 <script src="../public/js/animation.js"></script>
 
-<script src="../public/js/app-main.js"></script>
+<!--<script src="../public/js/app-main.js"></script>-->
 <script src="../public/js/common.js"></script>
 <script src="../public/js/Sortable.js"></script>
 <script type="text/javascript">
@@ -398,16 +344,16 @@
             })
         }
 
-
-        Sortable.create(document.getElementById("storyDragBox"), {
-            handle: '.drag-handle',
-            animation: 150,
-            onAdd: function (evt){ console.log('onAdd.bar:', evt.item); },
-            onUpdate: function (evt){ console.log('onUpdate.bar:', evt.item); },
-            onRemove: function (evt){ console.log('onRemove.bar:', evt.item); },
-            onStart:function(evt){ console.log('onStart.foo:', evt.item);console.info("evt:");console.info(evt);$(evt.item)},
-            onEnd: function(evt){ console.log('onEnd.foo:', evt.item);},
-        });
+//
+//        Sortable.create(document.getElementById("storyDragBox"), {
+//            handle: '.drag-handle',
+//            animation: 150,
+//            onAdd: function (evt){ console.log('onAdd.bar:', evt.item); },
+//            onUpdate: function (evt){ console.log('onUpdate.bar:', evt.item); },
+//            onRemove: function (evt){ console.log('onRemove.bar:', evt.item); },
+//            onStart:function(evt){ console.log('onStart.foo:', evt.item);console.info("evt:");console.info(evt);$(evt.item)},
+//            onEnd: function(evt){ console.log('onEnd.foo:', evt.item);},
+//        });
 
         $("#storyDragBox").delegate(".tpl-page-item","click",function(){
             $(this).addClass("selected").siblings().removeClass("selected")
@@ -418,8 +364,50 @@
         })
 
 
+        myScroll = new IScroll('#wrapper', {
+            zoom: true,
+            scrollX: true,
+            scrollY: true,
+            mouseWheel: true,
+            wheelAction: 'zoom',
+            onZoomEnd : function(){
+                console.info("room end");
+                alert("x");
+            },
+            onZoomEnd : function(){
+                console.info("room end");
+                alert("x");
+            }
+        });
+
+        myScroll.on('zoomStart', function(){
+            console.info("room start");
+            alert("x")
+        });
 
 
+        var myScroll = new IScroll('#wrapper', {
+            zoom: true,
+            scrollX: true,
+            scrollY: true,
+            mouseWheel: true,
+            wheelAction: 'zoom',
+            onZoomEnd : function(){
+                console.info("room end");
+                //alert("x");
+            },
+            onZoomEnd : function(){
+                console.info("room end");
+                //alert("x");
+            }
+        });
+
+        myScroll.on('zoomEnd', function(){
+            console.info("room start");
+            $("#font").html($("#scroller").css("transform").split("matrix(")[1].split(",")[0]);
+            $("#message").html(parseInt($("#scroller").css("transform").split("matrix(")[1].split(",")[0]*12));
+
+        });
 
 
     })
