修改首页实现逻辑 修改头像裁剪崩溃bug

--- a/app/src/main/res/layout/activity_message_center_detail.xml
+++ b/app/src/main/res/layout/activity_message_center_detail.xml
@@ -9,7 +9,8 @@
         android:id="@+id/message_center_message_detail_title"
         style="@style/App.TextStyle.Primary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:singleLine="false"/>
 
     <TextView
         android:id="@+id/message_center_message_detail_time"
