--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="pull-right">
             <ul class="list-inline">
-                <li><a class="icon-play"></a></li>
+                <li><a class="icon-play" id="storyPublish"></a></li>
                 <li><a class="icon-layout" id="toggleCat" ></a></li>
                 <li><a class="icon-list" id="manageStageList"></a></li>
                 <li><a class="icon-settings" onclick="setting(1);"></a></li>
@@ -178,24 +178,6 @@
         </div>
     </div>
 
-</div>
-
-<div id="editorImage" style="display: none">
-    <div class="header">
-        <div class="pull-left">
-            <a class="icon-arrow-left"></a><span class="tit">Edit Image</span>
-        </div>
-        <div class="pull-right">
-            <!--图片元件图片选择入口-->
-            <a class="imgIco-edit-image"></a>
-        </div>
-    </div>
-    <!--图片操作区域-->
-    <div id="cropper">
-        <div class="crop-area">
-            <img />
-        </div>
-    </div>
 </div>
 
 <div id="storyStageList" style="display: none">
